WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49079
Caret fails to render with some combination of iframes and compositing
https://bugs.webkit.org/show_bug.cgi?id=49079
Summary
Caret fails to render with some combination of iframes and compositing
Simon Fraser (smfr)
Reported
2010-11-05 11:17:38 PDT
Created
attachment 73087
[details]
Testcase Split out from
bug 19058
.
Attachments
Testcase
(2.36 KB, application/zip)
2010-11-05 11:17 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(3.24 KB, patch)
2010-11-09 12:05 PST
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-11-09 10:51:54 PST
<
rdar://problem/8647381
>
Simon Fraser (smfr)
Comment 2
2010-11-09 12:05:18 PST
Created
attachment 73398
[details]
Patch
Simon Fraser (smfr)
Comment 3
2010-11-09 12:14:24 PST
http://trac.webkit.org/changeset/71666
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug