2010-11-09  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Darin Adler.

        Caret fails to render with some combination of iframes and compositing
        https://bugs.webkit.org/show_bug.cgi?id=49079

        Because it's possible for the caret to jump between different
        compositing layers and the view, caret repainting currently dirties
        both the view and all compositing layers that intersect the caret rect,
        via repaintRectangleInViewAndCompositedLayers().

        When an iframe contained compositing layers, we erroneously skipped
        invalidating the compositing layer inside the iframe, which caused
        the caret to fail to blink.

        * manual-tests/compositing/caret-in-compositing-frame.html: Added.
        * manual-tests/compositing/resources/editable-compositing-subframe.html: Added.
        * rendering/RenderView.cpp:
        (WebCore::RenderView::repaintRectangleInViewAndCompositedLayers):

Canonical link: https://commits.webkit.org/62150@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71666 268f45cc-cd09-0410-ab3c-d52691b4dbfc